modules/rancher-2/aws_internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags {
    Name = "internet gateway"
  }
}
